// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorModal component should render ErrorModal correctly 1`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="ErrorModal-modal"
  closeTimeoutMS={0}
  contentLabel="Error Modal"
  isOpen={false}
  onRequestClose={[Function]}
  overlayClassName="ErrorModal-overlay"
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  role="dialog"
  shouldCloseOnEsc={true}
  shouldCloseOnOverlayClick={true}
  shouldFocusAfterRender={true}
  shouldReturnFocusAfterClose={true}
>
  <div
    className="ErrorModal-title"
  >
    Error
  </div>
  <button
    className="ErrorModal-button"
    onClick={[Function]}
  >
    Ok
  </button>
</Modal>
`;

exports[`ErrorModal component should render ErrorModal with all props correctly 1`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="ErrorModal-modal"
  closeTimeoutMS={0}
  contentLabel="Error Modal"
  isOpen={true}
  onRequestClose={[MockFunction]}
  overlayClassName="ErrorModal-overlay"
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  role="dialog"
  shouldCloseOnEsc={true}
  shouldCloseOnOverlayClick={true}
  shouldFocusAfterRender={true}
  shouldReturnFocusAfterClose={true}
>
  <div
    className="ErrorModal-title"
  >
    Error
  </div>
  <p
    className="ErrorModal-text"
  >
    Error: test error
  </p>
  <button
    className="ErrorModal-button"
    onClick={[MockFunction]}
  >
    Ok
  </button>
</Modal>
`;
